--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "open": "heroku open",
     "logs": "heroku logs --tail",
     "deploy": "git push heroku master",
-    "start": "LOCAL=TRUE node app.js"
+    "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.11.2",
+    "express": "4.14.1",
     "open": "0.0.5",
     "socket.io": "1.3.4"
   }
