--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "express": "4.14.1",
-    "open": "0.0.5",
+    "open": ">=6.0.0"
     "socket.io": "1.3.4"
   }
 }
